--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,19 @@
-
 {
   "name": "iagoveiculos-backend",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.0",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
