--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "prisma": "^5.22.0"
   },
   "devDependencies": {
