--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
+    "recharts": "^3.6.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
